--- a/_public/index.html
+++ b/_public/index.html
@@ -1,1 +1,50 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description"
+            content="Dislink - Your Discord Server Shortener">
+        <meta name="keywords" content="Dislink, Discord link shortener">
+        <title>Dislink - Shorten Discord Server Links</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+
+        <header>
+            <h1>Welcome to Dislink!</h1>
+
+            <nav>
+                <ul>
+                    <li><a
+                            href="https://discord.com/api/oauth2/authorize?client_id=1168845419082686464&permissions=537184257&scope=bot%20applications.commands"
+                            target="_blank" class="menu-link">Invite</a></li>
+                    <li><a href="http://dislink.space/me" class="menu-link">Support</a></li>
+                    <li><a href="https://github.com/yunikeil/Dislink"
+                            target="_blank" class="menu-link">Github</a></li>
+                    <li><a href="#How It Works" class="menu-link">Docs</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <section>
+
+            <h2>About Dislink</h2>
+            <p>Dislink is a Discord Server Link Shortener Bot that makes it
+                easier to share your server.</p>
+        </section>
+
+        <article>
+            <h2>How It Works</h2>
+            <p>...</p>
+        </article>
+
+        <footer>
+            <p>&copy; 2023 Dislink</p>
+        </footer>
+
+    </body>
+
+</html>
