--- a/_public/index.html
+++ b/_public/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dislink - Your Discord Server Shortener">
     <meta name="keywords" content="Dislink, Discord link shortener">
-
     
     <meta property="og:title" content="Dislink - Shorten Discord Server Links">
     <meta property="og:description" content="Dislink is a Discord Server Link Shortener Bot that makes it easier to share your server.">
@@ -13,6 +12,11 @@
 
     <title>Dislink - Shorten Discord Server Links</title>
     
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link rel="stylesheet" href="style.css" integrity="your-integrity-value" crossorigin="anonymous">
 </head>
 
