--- a/_public/index.html
+++ b/_public/index.html
@@ -8,7 +8,7 @@
     
     <meta property="og:title" content="Dislink - Shorten Discord Server Links">
     <meta property="og:description" content="Dislink is a Discord Server Link Shortener Bot that makes it easier to share your server.">
-    <!--<meta property="og:image" content="url_to_your_image">-->
+    <meta property="og:image" content="/images/og-image.png">
 
     <title>Dislink - Shorten Discord Server Links</title>
     
