--- a/_public/index.html
+++ b/_public/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="style.css" integrity="your-integrity-value" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css" integrity="your-integrity-value" crossorigin="anonymous">
 </head>
 
 <body>
