minor changes - deleted empty fields

--- a/_public/index.html
+++ b/_public/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="/style.css" integrity="your-integrity-value" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css" crossorigin="anonymous">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         <nav>
             <ul>
                 <li><a href="https://discord.com/api/oauth2/authorize?client_id=1168845419082686464&permissions=537184257&scope=bot%20applications.commands" target="_blank" class="menu-link">Invite</a></li>
-                <li><a href="http://dislink.space/me" class="menu-link">Support</a></li>
+                <li><a href="/me" target="_blank" class="menu-link">Support</a></li>
                 <li><a href="https://github.com/yunikeil/Dislink" target="_blank" class="menu-link">Github</a></li>
                 <li><a href="#HowItWorks" class="menu-link">Docs</a></li>
             </ul>
