--- a/_public/index.html
+++ b/_public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Dislink is a Discord Server Link Shortener Bot that makes it easier to share your server.">
     <meta property="og:image" content="/images/og-image.png">
 
-    <title>Dislink - Shorten Discord Server Links</title>
+    <title>Dislink - Shorten Discord Server Links - dislink.space</title>
     
     <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
