--- a/_public/index.html
+++ b/_public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dislink - Your Discord Server Shortener">
     <meta name="keywords" content="Dislink, Discord link shortener">
