--- a/_public/index.html
+++ b/_public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -9,20 +10,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dislink - Your Discord Server Shortener">
     <meta name="keywords" content="Dislink, Discord link shortener">
-    
+
     <meta property="og:title" content="Dislink - Shorten Discord Server Links">
-    <meta property="og:description" content="Dislink is a Discord Server Link Shortener Bot that makes it easier to share your server.">
-    <meta property="og:image" content="/images/og-image.png">
+    <meta property="og:description"
+        content="Dislink is a Discord Server Link Shortener Bot that makes it easier to share your server.">
+    <meta property="og:image" content="/c/images/og-image.png">
 
     <title>Dislink - Shorten Discord Server Links - dislink.space</title>
-    
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="/style.css" crossorigin="anonymous">
+    <link rel="apple-touch-icon" sizes="180x180" href="/c/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/c/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/c/images/icons/favicon-16x16.png">
+    <link rel="manifest" href="/c/site.webmanifest">
+
+    <link rel="stylesheet" href="/c/style.css" crossorigin="anonymous">
+    <script src="/c/snow.js"></script>
 </head>
+
+
 
 <body>
 
@@ -31,7 +36,8 @@
 
         <nav>
             <ul>
-                <li><a href="https://discord.com/api/oauth2/authorize?client_id=1168845419082686464&permissions=537184257&scope=bot%20applications.commands" target="_blank" class="menu-link">Invite</a></li>
+                <li><a href="https://discord.com/api/oauth2/authorize?client_id=1168845419082686464&permissions=537184257&scope=bot%20applications.commands"
+                        target="_blank" class="menu-link">Invite</a></li>
                 <li><a href="/me" target="_blank" class="menu-link">Support</a></li>
                 <li><a href="https://github.com/yunikeil/Dislink" target="_blank" class="menu-link">Github</a></li>
                 <li><a href="#HowItWorks" class="menu-link">Docs</a></li>
@@ -54,4 +60,5 @@
     </footer>
 
 </body>
+
 </html>
